(Format: Year/Month/Day)
Changes for 0.9.10:
*04/04/28:
  * Add apps file matching on WM_WINDOW_ROLE (Simon)
    - use "role=string". Particularly useful for gaim windows
      [app] (role=buddy_list) ...
    ClientPattern.hh/cc FbWindow.hh/cc
*04/04/27:
  * Fix up several toolbar theme items and alignments (Simon)
    - big improvement in look/compatibility of older styles
    Toolbar.cc Theme.hh/cc ThemeItems.hh ToolbarTheme.cc MenuTheme.cc Text.cc
    IconbarTheme.cc SlitTheme.cc WorkspaceNameTheme.hh IconbarTool.cc
*04/04/26:
  * Fixed some small compile errors with gcc 3.4
    (Henrik)
Changes for 0.9.9:
*04/04/22:
  * New Command: Deiconify <mode> <dest>
    * Where mode is:
      * last                         
         - deiconify last iconified window
      * lastworkspace (default)       
         - deiconify last iconified window 
           from current workspace
      * all
         - deiconify all iconified windows
      * allworkspace
         - deiconify all iconfiied windows 
           from current workspace
    * and dest is:
      * current (default)
        - deiconify them on current windows
      * origin 
        - deiconify them where they were
      * originquiet
        - deiconify to old workspace but dont follow
   (Thanks Mathias Gumz)
   FbCommands.cc/hh, FbCommandFactory.cc
  * Attach area for tabs:
    new resource:
    * session.tabsAttachArea: <mode>
    where mode is:
    Window   - dropping tabs to any part of the destination-window
               leads to attaching to that frame (default)
    Titlebar - dropping tabs only to the titlebar of the destination-
               window leads to attaching to that frame
    (Thanks Mathias Gumz)
  * FbRun: 
    path completion and fixed so it loads apps on first tab-press 
    (Thanks Mathias Gumz)
    FbRun.cc
*04/04/19:
  * Moved kde dockapps from slit into the systray in toolbar (Henrik
    Screen.hh/cc, Systray.hh/cc, fluxbox.hh/cc, Slit.cc/hh